Update poem from 2.0.10 to 2.0.11 (#8197)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -487,7 +487,8 @@ pbjson = "0.4.0"
 percent-encoding = "2.1.0"
 pin-project = "1.0.10"
 poem = { version = "=1.3.55", features = ["anyhow", "rustls"] }
-poem-openapi = { version = "2.0.10", features = ["swagger-ui", "url"] }
+poem-openapi = { version = "=2.0.11", features = ["swagger-ui", "url"] }
+poem-openapi-derive = "=2.0.11"
 pretty_assertions = "1.2.1"
 procfs = "0.14.1"
 proc-macro2 = "1.0.38"
