[AptosVM] RespawnedSession to avoid duplication
Consolidate change set processing to one single function.
In preparation for introducing storage deletion refund, where the logic
needs to run in the respawned session introduced in this PR.

As a side effect, the multisig transaction flow now creates one less
session.

--- a/aptos-move/aptos-vm/Cargo.toml
+++ b/aptos-move/aptos-vm/Cargo.toml
@@ -43,6 +43,7 @@ move-vm-test-utils = { workspace = true }
 move-vm-types = { workspace = true }
 num_cpus = { workspace = true }
 once_cell = { workspace = true }
+ouroboros = { workspace = true }
 rayon = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
