[api] for the debugger: get_raw_state_value (#8142)

--- a/api/doc/spec.yaml
+++ b/api/doc/spec.yaml
@@ -19,6 +19,8 @@ tags:
   description: Access to blocks
 - name: Events
   description: Access to events
+- name: Experimental
+  description: Experimental APIs, no guarantees
 - name: General
   description: General information
 - name: Tables
@@ -9003,6 +9005,7 @@ components:
       - transaction_not_found
       - table_item_not_found
       - block_not_found
+      - state_value_not_found
       - version_pruned
       - block_pruned
       - invalid_input
