--- a/terraform/helm/aptos-node/values.yaml
+++ b/terraform/helm/aptos-node/values.yaml
@@ -14,6 +14,11 @@ numValidators: 1
 # -- Total number of fullnode groups to deploy
 numFullnodeGroups: 1
 
+# -- Options for multicluster mode. This is *experimental only*.
+multicluster:
+  enabled: false 
+  targetClusters: ["cluster1", "cluster2", "cluster3"]
+
 # -- Specify validator and fullnode NodeConfigs via named ConfigMaps, rather than the generated ones from this chart.
 overrideNodeConfig: false
 
@@ -138,6 +143,7 @@ service:
     internal:
       # -- The Kubernetes ServiceType to use for validator
       type: ClusterIP
+      headless: false
     # -- The externalTrafficPolicy for the validator service
     externalTrafficPolicy: Local
     # -- If set and if the ServiceType is LoadBalancer, allow traffic to validators from these CIDRs
@@ -153,6 +159,7 @@ service:
     internal:
       # -- The Kubernetes ServiceType to use for fullnodes
       type: ClusterIP
+      headless: false
     # -- The externalTrafficPolicy for the fullnode service
     externalTrafficPolicy: Local
     # -- If set and if the ServiceType is LoadBalancer, allow traffic to fullnodes from these CIDRs
