--- a/terraform/helm/aptos-node/templates/validator.yaml
+++ b/terraform/helm/aptos-node/templates/validator.yaml
@@ -6,12 +6,16 @@ metadata:
   name: {{ include "aptos-validator.fullname" $ }}-{{$i}}-validator
   labels:
     {{- include "aptos-validator.labels" $ | nindent 4 }}
+    {{- include "aptos-validator.multiclusterLabels" (tuple $ $i) | nindent 4 }} 
 spec:
   selector:
     {{- include "aptos-validator.selectorLabels" $ | nindent 4 }}
     app.kubernetes.io/name: validator
     app.kubernetes.io/instance: validator-{{$i}}
   type: {{ $.Values.service.validator.internal.type }}
+  {{- if $.Values.service.validator.internal.headless }}
+  clusterIP: None
+  {{- end }}
   ports:
   - name: validator
     port: 6180
@@ -55,6 +59,7 @@ metadata:
     {{- include "aptos-validator.labels" $ | nindent 4 }}
     app.kubernetes.io/name: validator
     app.kubernetes.io/instance: validator-{{$i}}
+    {{- include "aptos-validator.multiclusterLabels" (tuple $ $i) | nindent 4 }}  
 spec:
   serviceName: {{ include "aptos-validator.fullname" $ }}-{{$i}}-validator
   replicas: 1
