--- a/types/Cargo.toml
+++ b/types/Cargo.toml
@@ -17,6 +17,7 @@ anyhow = { workspace = true }
 aptos-bitvec = { workspace = true }
 aptos-crypto = { workspace = true }
 aptos-crypto-derive = { workspace = true }
+arr_macro = { workspace = true }
 bcs = { workspace = true }
 chrono = { workspace = true }
 derivative = { workspace = true }
