--- a/ecosystem/indexer-grpc/indexer-grpc-post-processor/Cargo.toml
+++ b/ecosystem/indexer-grpc/indexer-grpc-post-processor/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "aptos-indexer-grpc-file-store"
-description = "Indexer gRPC file store to save transactions to Google Cloud Storage."
+name = "aptos-indexer-grpc-post-processor"
+description = "Indexer gRPC post processor is a collection of post-processing tasks on non-critical path."
 version = "0.1.0"
 
 # Workspace inherited keys
@@ -16,16 +16,18 @@ rust-version = { workspace = true }
 anyhow = { workspace = true }
 aptos-indexer-grpc-server-framework = { workspace = true }
 aptos-indexer-grpc-utils = { workspace = true }
-aptos-metrics-core  =   { workspace = true }
-aptos-moving-average = { workspace = true }
+aptos-metrics-core = { workspace = true }
 aptos-runtimes = { workspace = true }
 async-trait = { workspace = true }
+backtrace = { workspace = true }
+chrono = { workspace = true }
 clap = { workspace = true }
-cloud-storage = { workspace = true }
-futures-util = { workspace = true }
+hostname = { workspace = true }
 once_cell = { workspace = true }
-redis = { workspace = true }
+reqwest = { workspace = true }
 serde = { workspace = true }
-serde_json = { workspace = true }
+serde_json =  { workspace = true }
 tokio = { workspace = true }
-tracing = { workspace = true }
+toml = { workspace = true }
+tracing =  { workspace = true }
+tracing-subscriber = { workspace = true }
