--- a/ecosystem/indexer-grpc/indexer-grpc-cache-worker/Cargo.toml
+++ b/ecosystem/indexer-grpc/indexer-grpc-cache-worker/Cargo.toml
@@ -14,9 +14,8 @@ rust-version = { workspace = true }
 
 [dependencies]
 anyhow = { workspace = true }
-aptos-crash-handler = { workspace = true }
+aptos-indexer-grpc-server-framework = { workspace = true }
 aptos-indexer-grpc-utils = { workspace = true }
-aptos-logger = { workspace = true }
 aptos-metrics-core = { workspace = true }
 aptos-moving-average = { workspace = true }
 aptos-protos = { workspace = true }
@@ -30,9 +29,9 @@ futures-core = { workspace = true }
 once_cell = { workspace = true }
 prost = { workspace = true }
 redis = { workspace = true }
-redis-test = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 serde_yaml = { workspace = true }
 tokio = { workspace = true }
 tonic = { workspace = true }
+tracing = { workspace = true }
