--- a/ecosystem/indexer-grpc/indexer-grpc-parser/Cargo.toml
+++ b/ecosystem/indexer-grpc/indexer-grpc-parser/Cargo.toml
@@ -14,9 +14,8 @@ rust-version = { workspace = true }
 
 [dependencies]
 anyhow = { workspace = true }
-aptos-crash-handler = { workspace = true }
+aptos-indexer-grpc-server-framework = { workspace = true }
 aptos-indexer-grpc-utils = { workspace = true }
-aptos-logger = { workspace = true }
 aptos-metrics-core = { workspace = true }
 aptos-moving-average = { workspace = true }
 aptos-protos = { workspace = true }
@@ -39,3 +38,4 @@ serde_json = { workspace = true }
 sha2 = { workspace = true }
 tokio = { workspace = true }
 tonic = { workspace = true }
+tracing = { workspace = true }
