--- a/aptos-move/aptos-transaction-benchmarks/Cargo.toml
+++ b/aptos-move/aptos-transaction-benchmarks/Cargo.toml
@@ -23,7 +23,7 @@ aptos-push-metrics =  { workspace = true }
 aptos-types = { workspace = true }
 aptos-vm = { workspace = true }
 clap = { workspace = true }
-criterion = { workspace = true }
+criterion = { workspace = true, features = ["html_reports"] }
 criterion-cpu-time = { workspace = true }
 num_cpus = { workspace = true }
 proptest = { workspace = true }
