--- a/aptos-move/framework/Cargo.toml
+++ b/aptos-move/framework/Cargo.toml
@@ -76,6 +76,7 @@ tiny-keccak = { workspace = true }
 
 [dev-dependencies]
 aptos-gas = { workspace = true }
+aptos-language-e2e-tests = { workspace = true }
 aptos-vm = { workspace = true, features = ["testing"] }
 claims = { workspace = true }
 move-cli = { workspace = true }
