[aptos-ledger] Added readme for publishing (#8273)
* update cargo publish to true

* Added readme and updated cargo.toml

* correct readme

* Update crates/aptos-ledger/README.md

Co-authored-by: Maayan <maayan@aptoslabs.com>

* Update crates/aptos-ledger/README.md

Co-authored-by: Daniel Porteous (dport) <danielporteous1@gmail.com>

* Update crates/aptos-ledger/README.md

Co-authored-by: Maayan <maayan@aptoslabs.com>

---------

Co-authored-by: Maayan <maayan@aptoslabs.com>
Co-authored-by: Daniel Porteous (dport) <danielporteous1@gmail.com>

--- a/crates/aptos-ledger/Cargo.toml
+++ b/crates/aptos-ledger/Cargo.toml
@@ -2,14 +2,14 @@
 name = "aptos-ledger"
 description = "Library for integration with the Aptos app on Ledger"
 version = "0.1.0"
+publish = true
 
 # Workspace inherited keys
 authors = { workspace = true }
 edition = { workspace = true }
 homepage = { workspace = true }
 license = { workspace = true }
-publish = { workspace = true }
-repository = { workspace = true }
+repository = "https://github.com/aptos-labs/aptos-core/tree/main/crates/aptos-ledger"
 rust-version = { workspace = true }
 
 [dependencies]
