[forge] Automatically generate a useful namespace (#8251)
* [forge] Automatically generate a useful namespace

Make --namespace optional and give the default a somewhat easy to remember name

Test Plan: unittests

* [forge] Test client and print descriptive error on failure

Test the k8s client before returning it, make this function return a result and also add descriptive messages when it fails, like for instance which cluster you're attempting to use and if that seems like a forge cluster or not

Test Plan: try running unauthenticated

```
$ forge test k8s-swarm --keep

2023-05-17T22:28:46.674119Z [main] INFO testsuite/forge/src/backend/k8s/mod.rs:57 Using forge namespace: forge-rebend-externalistic-accusation-nagster

running 1 tests
Starting Swarm with supported versions: ["devnet", "devnet"]
Failed to run tests:
Failed to connect to kubernetes cluster gke_mainnet-validator_us-west1-a_aptos-node4, please make sure you have the right kubeconfig
Error: Failed to connect to kubernetes cluster gke_mainnet-validator_us-west1-a_aptos-node4, please make sure you have the right kubeconfig
```

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -509,6 +509,7 @@ quanta = "0.10.1"
 quote = "1.0.18"
 rand = "0.7.3"
 rand_core = "0.5.1"
+random_word = "0.3.0"
 rayon = "1.5.2"
 redis = { version = "0.22.3", features = ["tokio-comp", "script"] }
 redis-test = { version = "0.1.1", features = ["aio"] }
