Avoid materializing delta set before epilogue (#8340)
* Avoid materializing delta set before epilogue

* Add [should panic] to aggregator tests for underflow/overflow

* Remove [should panic] flags for tests

* Add [should_panic] to test_aggregator_underflow and overflow

--- a/aptos-move/aptos-vm/Cargo.toml
+++ b/aptos-move/aptos-vm/Cargo.toml
@@ -51,6 +51,7 @@ smallvec = { workspace = true }
 tracing = { workspace = true }
 
 [dev-dependencies]
+aptos-language-e2e-tests = { workspace = true }
 aptos-types = { workspace = true }
 proptest = { workspace = true }
 
