--- a/aptos-move/move-examples/fungible_asset/simple_managed_coin/Move.toml
+++ b/aptos-move/move-examples/fungible_asset/simple_managed_coin/Move.toml
@@ -1,5 +1,5 @@
 [package]
-name = "FungibleAsset"
+name = "SimpleManagedCoin"
 version = "0.0.0"
 
 [addresses]
@@ -7,4 +7,4 @@ aptos_framework = "0x1"
 example_addr = "_"
 
 [dependencies]
-AptosFramework = { local = "../../framework/aptos-framework" }
+AptosFramework = { local = "../../../framework/aptos-framework" }
