--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -39,7 +39,7 @@
 /consensus/src/quorum_store/ @bchocho @sasha8 @gelash
 
 # Owners for the `/crates/aptos` directory and all its subdirectories.
-/crates/aptos @gregnazario
+/crates/aptos @gregnazario @0xjinn @banool
 
 # Owners for the `/crates/aptos-crypto*` directories.
 /crates/aptos-crypto-derive/ @alinush
@@ -85,8 +85,8 @@
 /docker/ @aptos-labs/prod-eng
 
 # Owners for the `SDKs`.
-/ecosystem/python/sdk @davidiw @gregnazario @banool @0xmaayan
-/ecosystem/typescript/sdk @jjleng @gregnazario @banool @0xmaayan
+/ecosystem/python/sdk @davidiw @gregnazario @banool @0xmaayan @0xjinn
+/ecosystem/typescript/sdk @gregnazario @banool @0xmaayan @0xjinn
 
 # Owners for execution and storage.
 /execution/ @msmouse @lightmark
