[vm][refactoring] New VM types (#8195)
1. `TransactionOutputExt` and `ChangeSetExt` are gone. Now deltas are
    first-class citizens of transaction outputs and change sets.
2. New `vm-types` crate is added. The goal is to have VM-native types
    there and which can be converted to storage types if needed. The new
    types include a new transaction output (`VMOutput`) and change set
    (`VMChangeSet`).
3. Check for change sets is moved from storage to VM level, where it was
    always performed.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ members = [
     "aptos-move/aptos-vm",
     "aptos-move/aptos-vm-logging",
     "aptos-move/aptos-vm-profiling",
+    "aptos-move/aptos-vm-types",
     "aptos-move/block-executor",
     "aptos-move/e2e-move-tests",
     "aptos-move/e2e-tests",
@@ -370,6 +371,7 @@ aptos-vault-client = { path = "secure/storage/vault" }
 aptos-vm = { path = "aptos-move/aptos-vm" }
 aptos-vm-logging = { path = "aptos-move/aptos-vm-logging" }
 aptos-vm-genesis = { path = "aptos-move/vm-genesis" }
+aptos-vm-types = { path = "aptos-move/aptos-vm-types" }
 aptos-vm-validator = { path = "vm-validator" }
 aptos-warp-webserver = { path = "crates/aptos-warp-webserver" }
 aptos-writeset-generator = { path = "aptos-move/writeset-transaction-generator" }
