[indexer-grpc] integration tests with docker-compose (#8250)
* [docker-compose][indexer-grpc] add arm64 redis override and read replica

* [testsuite] implement indexer_grpc_local.py for local test

* [indexer-grpc] integration tests with docker-compose and operators

* [indexer-grpc] clean up

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -93,6 +93,7 @@ members = [
     "ecosystem/indexer-grpc/indexer-grpc-data-service",
     "ecosystem/indexer-grpc/indexer-grpc-file-store",
     "ecosystem/indexer-grpc/indexer-grpc-fullnode",
+    "ecosystem/indexer-grpc/indexer-grpc-integration-tests",
     "ecosystem/indexer-grpc/indexer-grpc-parser",
     "ecosystem/indexer-grpc/indexer-grpc-post-processor",
      "ecosystem/indexer-grpc/indexer-grpc-server-framework",
