--- a/terraform/helm/testnet-addons/templates/ingress.yaml
+++ b/terraform/helm/testnet-addons/templates/ingress.yaml
@@ -5,14 +5,16 @@ metadata:
   labels:
     {{- include "testnet-addons.labels" . | nindent 4 }}
   annotations:
+    {{- if .Values.service.domain }}
+    external-dns.alpha.kubernetes.io/hostname: {{ .Values.service.domain }}
+    {{- end }}
+    # EKS annotations
+    {{- if eq .Values.cloud "EKS" }}
     kubernetes.io/ingress.class: alb
     alb.ingress.kubernetes.io/scheme: internet-facing
     alb.ingress.kubernetes.io/tags: {{ .Values.service.aws_tags | quote }}
     {{- if .Values.ingress.loadBalancerSourceRanges }}
     alb.ingress.kubernetes.io/inbound-cidrs: {{ join "," .Values.ingress.loadBalancerSourceRanges }}
-    {{- end }}
-    {{- if .Values.service.domain }}
-    external-dns.alpha.kubernetes.io/hostname: {{ .Values.service.domain }}
     {{- end }}
     {{- if .Values.ingress.acm_certificate }}
     alb.ingress.kubernetes.io/certificate-arn: {{ .Values.ingress.acm_certificate }}
@@ -27,6 +29,16 @@ metadata:
     alb.ingress.kubernetes.io/target-group-attributes: stickiness.enabled=true,stickiness.lb_cookie.duration_seconds={{ .Values.ingress.cookieDurationSeconds }}
     alb.ingress.kubernetes.io/target-type: ip
     {{- end }}
+    {{- end }} # "EKS"
+    # GKE annotations
+    {{- if eq .Values.cloud "GKE" }}
+    kubernetes.io/ingress.class: "gce"
+    # Allow HTTP but always return 301 because we have redirectToHttps enabled
+    kubernetes.io/ingress.allow-http: "true"
+    kubernetes.io/ingress.global-static-ip-name: {{ .Values.ingress.gcp_static_ip }}
+    ingress.gcp.kubernetes.io/pre-shared-cert: {{ .Values.ingress.gcp_certificate }}
+    networking.gke.io/v1beta1.FrontendConfig: {{ include "testnet-addons.fullname" . }}-api
+    {{- end }} # "GKE"
 spec:
   rules:
   {{- if .Values.service.domain }}
@@ -64,3 +76,15 @@ spec:
             name: {{ include "testnet-addons.fullname" . }}-api
             port:
               number: 80
+---
+{{- if eq .Values.cloud "GKE" }}
+apiVersion: networking.gke.io/v1beta1
+kind: FrontendConfig
+metadata:
+  name: {{ include "testnet-addons.fullname" . }}-api
+  namespace: default
+spec:
+  redirectToHttps:
+    enabled: true
+{{- end }}
+---
