--- a/terraform/helm/testnet-addons/values.yaml
+++ b/terraform/helm/testnet-addons/values.yaml
@@ -1,3 +1,6 @@
+# Cloud provider
+cloud: EKS
+
 # -- Default image tag to use for all aptos images
 imageTag: devnet
 
@@ -50,7 +53,7 @@ load_test:
   # -- The fullnode groups to target
   fullnode:
     groups:
-    - name: fullnode
+      - name: fullnode
   config:
     # -- The number of fullnode groups to run traffic against
     numFullnodeGroups:
@@ -80,6 +83,8 @@ service:
 ingress:
   # -- The ACM certificate to install on the ingress
   acm_certificate:
+  # -- The GCP certificate to install on the ingress
+  gcp_certificate:
   # -- The ARN of the WAF ACL to install on the ingress
   wafAclArn:
   # -- List of CIDRs to accept traffic from
