--- a/.github/workflows/merge-gatekeeper.yaml
+++ b/.github/workflows/merge-gatekeeper.yaml
@@ -16,6 +16,7 @@ jobs:
       checks: read
       statuses: read
     steps:
+      - uses: actions/checkout@93ea575cb5d8a053eaa0ac8fa3b40d7e05a33cc8 # pin@v3
       - name: Beta allowlist for certain actors
         shell: bash
         run: |
